[gd_scene load_steps=16 format=3 uid="uid://rccofgi2ew23"]

[ext_resource type="Script" path="res://Scripts/Level_Scripts/1-1U1.gd" id="1_813xr"]
[ext_resource type="AudioStream" uid="uid://dkvyq0vuwbrvm" path="res://Assets/Audio/Original/Pipe Room.wav" id="1_ligrk"]
[ext_resource type="Texture2D" uid="uid://bvk171culi5t0" path="res://Assets/Tilesets/Global.png" id="2_7axt7"]
[ext_resource type="Texture2D" uid="uid://cgadwoljj5s5o" path="res://Assets/Sprites/Backgrounds/Underground.png" id="2_nspi3"]
[ext_resource type="Script" path="res://Scripts/camera_2d.gd" id="4_g5uec"]
[ext_resource type="AudioStream" uid="uid://ca12j5b15rehi" path="res://Assets/SFX/pause.wav" id="4_w7fln"]
[ext_resource type="PackedScene" uid="uid://b3e2uv1pq2x1o" path="res://Scenes/player.tscn" id="5_6f2n6"]
[ext_resource type="PackedScene" uid="uid://cy62lavp30u4a" path="res://Scenes/pause.tscn" id="7_4s0fe"]
[ext_resource type="PackedScene" uid="uid://bqaypbcng5bti" path="res://Scenes/pipe_side.tscn" id="7_38cdg"]
[ext_resource type="PackedScene" uid="uid://d2c6f8s1nedu1" path="res://Scenes/UI.tscn" id="8_hpwpy"]
[ext_resource type="PackedScene" uid="uid://dsjsrcqx7wfav" path="res://Scenes/Levels/1-1.tscn" id="11_ouicc"]
[ext_resource type="PackedScene" uid="uid://c0jm0sk3bfyf1" path="res://Scenes/fallwait_block.tscn" id="12_sbfm1"]
[ext_resource type="PackedScene" uid="uid://budmv4idx80w4" path="res://Scenes/collectable_coin.tscn" id="12_wgchr"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_44jf6"]
texture = ExtResource("2_7axt7")
texture_region_size = Vector2i(8, 8)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
4:0/0/physics_layer_0/polygon_0/one_way = true
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
3:2/0 = 0
2:2/0 = 0
1:2/0 = 0
0:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
4:3/0 = 0
4:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
3:3/0 = 0
4:2/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
5:2/0 = 0
5:1/0 = 0
5:0/0 = 0
6:3/0 = 0
6:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:3/0 = 0
7:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:2/0 = 0
9:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
9:3/0 = 0
9:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
8:3/0 = 0
8:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4, -4, 4, -4, 4, 4, -4, 4)
7:0/0 = 0
6:0/0 = 0
6:1/0 = 0
7:1/0 = 0
0:4/0 = 0
7:4/0 = 0
6:4/0 = 0
10:4/0 = 0
10:3/0 = 0
10:2/0 = 0
10:1/0 = 0
11:1/0 = 0
11:2/0 = 0
11:3/0 = 0
11:4/0 = 0
9:4/0 = 0
8:4/0 = 0
11:0/0 = 0

[sub_resource type="TileSet" id="TileSet_i2741"]
tile_size = Vector2i(8, 8)
physics_layer_0/collision_layer = 16
physics_layer_0/collision_mask = 5
sources/0 = SubResource("TileSetAtlasSource_44jf6")

[node name="1-1 Under 1" type="Node" node_paths=PackedStringArray("ui", "player", "level_music") groups=["scene_manager_entity_nodes"]]
process_mode = 3
script = ExtResource("1_813xr")
spawn_point = Vector2(335.824, 108)
ui = NodePath("Camera2D/UI")
player = NodePath("Player")
level_music = NodePath("LevelMusic")
metadata/entity_name = "1-1u1"

[node name="Pausable" type="Node2D" parent="."]
process_mode = 1
position = Vector2(-96.0479, 0)

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(32.1721, 71.9053)
texture = ExtResource("2_nspi3")

[node name="TileMap" type="TileMap" parent="."]
position = Vector2(31.9521, 80)
tile_set = SubResource("TileSet_i2741")
format = 2
layer_0/tile_data = PackedInt32Array(-458762, 65536, 0, 524278, 720896, 0, 458742, 65536, 0, 458743, 65536, 0, 458744, 65536, 0, 524279, 720896, 1, 524280, 720896, 0, 524281, 720896, 1, 524282, 720896, 0, 458746, 65536, 0, 458745, 65536, 0, 393206, 65536, 0, 327670, 65536, 0, 262134, 65536, 0, 196598, 65536, 0, 131062, 65536, 0, 65526, 65536, 0, -10, 65536, 0, -65546, 65536, 0, -131082, 65536, 0, -196618, 65536, 0, -262154, 65536, 0, -327690, 65536, 0, -393226, 65536, 0, 393211, 65536, 0, 327675, 65536, 0, 327676, 65536, 0, 393212, 65536, 0, 393213, 65536, 0, 393214, 65536, 0, 393215, 65536, 0, 327680, 65536, 0, 327681, 65536, 0, 262145, 65536, 0, 262144, 65536, 0, 327679, 65536, 0, 327678, 65536, 0, 327677, 65536, 0, 458747, 65536, 0, 458748, 65536, 0, 458749, 65536, 0, 458750, 65536, 0, 458751, 65536, 0, 393216, 65536, 0, 393217, 65536, 0, 393218, 65536, 0, 393219, 65536, 0, 393220, 65536, 0, 393221, 65536, 0, 393222, 65536, 0, 393223, 65536, 0, 393224, 65536, 0, 393225, 65536, 0, 458761, 720896, 1, 458760, 720896, 0, 458759, 720896, 1, 458758, 720896, 0, 458757, 720896, 1, 458756, 720896, 0, 458755, 720896, 1, 458754, 720896, 0, 458753, 720896, 1, 458752, 720896, 0, 524287, 720896, 1, 524286, 720896, 0, 524285, 720896, 1, 524284, 720896, 0, 524283, 720896, 1, -458758, 65536, 0, -458757, 65536, 0, -458756, 65536, 0, -458755, 65536, 0, -458754, 65536, 0, -458753, 65536, 0, -524288, 65536, 0, -524287, 65536, 0, -524286, 65536, 0, 196616, 524288, 1, 196617, 589824, 1, -524280, 524288, 1, -524279, 589824, 1, -458744, 524288, 1, -458743, 589824, 1, -393208, 524288, 1, -393207, 589824, 1, -327672, 524288, 1, -327671, 589824, 1, -262136, 524288, 1, -262135, 589824, 1, -196600, 524288, 1, -196599, 589824, 1, -131064, 524288, 1, -131063, 589824, 1, -65528, 524288, 1, -65527, 589824, 1, 8, 524288, 1, 9, 589824, 1, 65544, 524288, 1, 65545, 589824, 1, 131080, 524288, 1, 131081, 589824, 1, 262152, 524288, 2, 327688, 524288, 3, 262153, 589824, 2, 327689, 589824, 3, -524285, 65536, 0, -524284, 65536, 0, 458741, 655360, 2, 393205, 655360, 1, 327669, 655360, 2, 262133, 655360, 1, 196597, 655360, 2, 131061, 655360, 1, 65525, 655360, 2, -11, 655360, 1, -65547, 655360, 2, -131083, 655360, 1, -196619, 655360, 2, -262155, 655360, 1, -327691, 655360, 2, -393227, 655360, 1, -458763, 458752, 4, -458764, 720896, 1, -458765, 720896, 0, -458766, 720896, 1, -458767, 720896, 0, -458768, 720896, 1, 524277, 720896, 2, 393226, 655360, 3, 458762, 720896, 3, 262154, 655360, 3, 327690, 655360, 4, 131082, 655360, 3, 196618, 655360, 4, 10, 655360, 3, 65546, 655360, 4, -131062, 655360, 3, -65526, 655360, 4, -262134, 655360, 3, -196598, 655360, 4, -393206, 655360, 3, -327670, 655360, 4, -524278, 393216, 4, -458742, 655360, 4, -524276, 720896, 0, -524274, 720896, 0, -524275, 720896, 1, -524277, 720896, 1, -524273, 720896, 1, -393229, 524288, 4, -393228, 589824, 4, -327693, 589824, 4, -327692, 524288, 4, -262157, 524288, 4, -262156, 589824, 4, -196621, 589824, 4, -196620, 524288, 4, -131085, 524288, 4, -131084, 589824, 4, -65549, 589824, 4, -65548, 524288, 4, -13, 524288, 4, -12, 589824, 4, 65523, 589824, 4, 65524, 524288, 4, 131059, 524288, 4, 131060, 589824, 4, 196595, 589824, 4, 196596, 524288, 4, -327694, 524288, 4, -196622, 524288, 4, -65550, 524288, 4, 65522, 524288, 4, 196594, 524288, 4, 262131, 524288, 4, 262132, 589824, 4, 327666, 524288, 4, 327667, 589824, 4, 393203, 524288, 4, 393204, 589824, 4, 458738, 524288, 4, 458739, 589824, 4, 524275, 524288, 4, 524276, 589824, 4, 524273, 524288, 4, 524274, 589824, 4, 393201, 524288, 4, 393202, 589824, 4, 262129, 524288, 4, 262130, 589824, 4, 131057, 524288, 4, 131058, 589824, 4, -15, 524288, 4, -14, 589824, 4, -131087, 524288, 4, -131086, 589824, 4, -262159, 524288, 4, -262158, 589824, 4, -393231, 524288, 4, -393230, 589824, 4, -327696, 524288, 4, -327695, 589824, 4, -196624, 524288, 4, -196623, 589824, 4, -65552, 524288, 4, -65551, 589824, 4, 65520, 524288, 4, 65521, 589824, 4, 196592, 524288, 4, 196593, 589824, 4, 327664, 524288, 4, 327665, 589824, 4, 458736, 524288, 4, 458737, 589824, 4, 327668, 524288, 4, 458740, 524288, 4, 524272, 589824, 4, 393200, 589824, 4, 262128, 589824, 4, 131056, 589824, 4, -16, 589824, 4, -131088, 589824, 4, -262160, 589824, 4, -393232, 589824, 4, 458763, 524288, 4, 458764, 589824, 4, 393228, 524288, 4, 393229, 589824, 4, 262155, 589824, 4, 262156, 524288, 4, 327691, 524288, 4, 327692, 589824, 4, 262157, 589824, 4, 196619, 524288, 4, 196620, 589824, 4, 131084, 524288, 4, 131085, 589824, 4, 65547, 524288, 4, 65548, 589824, 4, 12, 524288, 4, 13, 589824, 4, -65525, 524288, 4, -65524, 589824, 4, -131060, 524288, 4, -131059, 589824, 4, -196597, 524288, 4, -196596, 589824, 4, -262132, 524288, 4, -262131, 589824, 4, -327669, 524288, 4, -327668, 589824, 4, -393204, 524288, 4, -393203, 589824, 4, -458741, 524288, 4, -458740, 589824, 4, -458739, 524288, 4, -458738, 589824, 4, -327667, 524288, 4, -327666, 589824, 4, -393202, 524288, 4, -393201, 589824, 4, -262130, 524288, 4, -262129, 589824, 4, -196595, 524288, 4, -196594, 589824, 4, -131058, 524288, 4, -131057, 589824, 4, -65523, 524288, 4, -65522, 589824, 4, 14, 524288, 4, 15, 589824, 4, 65549, 524288, 4, 65550, 589824, 4, 131086, 524288, 4, 131087, 589824, 4, 196621, 524288, 4, 196622, 589824, 4, 262158, 524288, 4, 262159, 589824, 4, 393230, 524288, 4, 327693, 524288, 4, 327694, 589824, 4, 393231, 589824, 4, 458765, 524288, 4, 458766, 589824, 4, 458767, 524288, 4, 327695, 524288, 4, 196623, 524288, 4, 65551, 524288, 4, -65521, 524288, 4, -196593, 524288, 4, -327665, 524288, 4, -458737, 524288, 4, -393205, 589824, 4, -262133, 589824, 4, -131061, 589824, 4, 11, 589824, 4, 131083, 589824, 4, 393227, 589824, 4)

[node name="LevelMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_ligrk")
autoplay = true

[node name="Player" parent="." instance=ExtResource("5_6f2n6")]
process_mode = 1
position = Vector2(-29.3013, 21.5672)
collision_layer = 21

[node name="Pause" parent="." instance=ExtResource("7_4s0fe")]
offset_left = 43.2851
offset_right = 112.285

[node name="PauseSFX" type="AudioStreamPlayer" parent="Pause"]
stream = ExtResource("4_w7fln")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(119.985, 78.5023)
limit_left = 0
limit_top = 0
limit_right = 160
limit_bottom = 144
limit_smoothed = true
position_smoothing_speed = 10.0
editor_draw_limits = true
script = ExtResource("4_g5uec")

[node name="UI" parent="Camera2D" instance=ExtResource("8_hpwpy")]
WorldName = "1-1"

[node name="PipeSide" parent="." instance=ExtResource("7_38cdg")]
position = Vector2(83.9852, 120.024)
scene_overground = ExtResource("11_ouicc")
spawn_point = Vector2(223.912, 108)
start_from_pipe_exit = 1

[node name="Coins" type="Node" parent="."]

[node name="CollectableCoin" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(3.81705, 76)

[node name="CollectableCoin2" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(11.8171, 76)

[node name="CollectableCoin3" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(19.8171, 76)

[node name="CollectableCoin4" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(27.8171, 76)

[node name="CollectableCoin5" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(35.8172, 76)

[node name="CollectableCoin6" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(35.8172, 92)

[node name="CollectableCoin7" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(27.8171, 92)

[node name="CollectableCoin8" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(19.8171, 92)

[node name="CollectableCoin9" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(11.8171, 92)

[node name="CollectableCoin10" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(3.81705, 92)

[node name="CollectableCoin11" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(3.81705, 108)

[node name="CollectableCoin12" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(11.8171, 108)

[node name="CollectableCoin13" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(19.8171, 108)

[node name="CollectableCoin14" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(27.8171, 108)

[node name="CollectableCoin15" parent="Coins" instance=ExtResource("12_wgchr")]
position = Vector2(35.8172, 108)

[node name="FallwaitBlock" parent="." instance=ExtResource("12_sbfm1")]
position = Vector2(-29.6307, 33.6614)

[connection signal="scene_under_change" from="Player" to="." method="_on_player_scene_under_change"]
[connection signal="body_entered" from="Coins/CollectableCoin" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin2" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin3" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin4" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin5" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin6" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin7" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin8" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin9" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin10" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin11" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin12" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin13" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin14" to="Player" method="_on_collectable_coin_19_body_entered"]
[connection signal="body_entered" from="Coins/CollectableCoin15" to="Player" method="_on_collectable_coin_19_body_entered"]
